--- a/GaussianElimination.ipynb
+++ b/GaussianElimination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,7 @@
        " 3.0  11.0   6.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        " 35.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,19 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Array{Float64,1}:\n",
-       " -3.0\n",
-       "  4.0\n",
-       " -0.0"
+       " -2.9999999999999964   \n",
+       "  3.999999999999999    \n",
+       "  5.921189464667499e-16"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "naive_gauss (generic function with 4 methods)"
+       "naive_gauss (generic function with 2 methods)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        " 0.0   0.0   1.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TwoMatrices([1 3 1; 1 1 -1; 3 11 6], [1.0 3.0 1.0; 0.0 -2.0 -2.0; 0.0 0.0 1.0], \"Before Base.show\")"
+       "TwoMatrices([1.0 3.0 1.0; 1.0 1.0 -1.0; 3.0 11.0 6.0], [1.0 3.0 1.0; 0.0 -2.0 -2.0; 0.0 0.0 1.0], \"Before Base.show\")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,19 +223,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Test Base.show\n",
-       " 1   3   1              1.0   3.0   1.0\n",
-       " 1   1  -1     --->     0.0  -2.0  -2.0\n",
-       " 3  11   6              0.0   0.0   1.0"
+       " 1.0   3.0   1.0              1.0   3.0   1.0\n",
+       " 1.0   1.0  -1.0     --->     0.0  -2.0  -2.0\n",
+       " 3.0  11.0   6.0              0.0   0.0   1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "shorten (generic function with 2 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "visualize_gauss (generic function with 2 methods)"
+       "visualize_gauss (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
     "        Uprev, = naive_gauss(A, step-1)\n",
     "        U, row, col, factor = naive_gauss(A, step)\n",
     "        pivot = U[col, col]\n",
-    "        tm = TwoMatrices(shorten.(Uprev), shorten.(U), \"Gaussian elimination for colum $col with povot $pivot\")\n",
+    "        tm = TwoMatrices(shorten.(Uprev), shorten.(U), \"Gaussian elimination for colum $col with pivot $pivot\")\n",
     "        Base.show(stdout,tm)\n",
     "#         return Uprev,s,U\n",
     "    end\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -316,15 +316,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaussian elimination for colum 1 with povot 1.0\n",
+      "Gaussian elimination for colum 1 with pivot 1.0\n",
       " 1.0   3.0   1.0   9.0              1.0   3.0   1.0   9.0\n",
       " 1.0   1.0  -1.0   1.0     --->     0.0  -2.0  -2.0  -8.0\n",
       " 3.0  11.0   6.0  35.0              3.0  11.0   6.0  35.0\n",
-      "Gaussian elimination for colum 1 with povot 1.0\n",
+      "Gaussian elimination for colum 1 with pivot 1.0\n",
       " 1.0   3.0   1.0   9.0              1.0   3.0   1.0   9.0\n",
       " 0.0  -2.0  -2.0  -8.0     --->     0.0  -2.0  -2.0  -8.0\n",
       " 3.0  11.0   6.0  35.0              0.0   2.0   3.0   8.0\n",
-      "Gaussian elimination for colum 2 with povot -2.0\n",
+      "Gaussian elimination for colum 2 with pivot -2.0\n",
       " 1.0   3.0   1.0   9.0              1.0   3.0   1.0   9.0\n",
       " 0.0  -2.0  -2.0  -8.0     --->     0.0  -2.0  -2.0  -8.0\n",
       " 0.0   2.0   3.0   8.0              0.0   0.0   1.0   0.0\n"
@@ -337,73 +337,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gaussian elimination for colum 1 with povot -5.0\n",
-      " -5.0   5.0   6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      " -5.0   1.0  -5.0   7.0   1.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      " -3.0   9.0  -9.0  -3.0   1.0     --->     -3.0   9.0   -9.0  -3.0   1.0\n",
-      "  2.0  -8.0   2.0   0.0  -1.0               2.0  -8.0    2.0   0.0  -1.0\n",
-      "  2.0   9.0  -6.0   3.0  -9.0               2.0   9.0   -6.0   3.0  -9.0\n",
-      "Gaussian elimination for colum 1 with povot -5.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      " -3.0   9.0   -9.0  -3.0   1.0     --->      0.0   6.0  -12.6  -6.6   2.2\n",
-      "  2.0  -8.0    2.0   0.0  -1.0               2.0  -8.0    2.0   0.0  -1.0\n",
-      "  2.0   9.0   -6.0   3.0  -9.0               2.0   9.0   -6.0   3.0  -9.0\n",
-      "Gaussian elimination for colum 1 with povot -5.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      "  0.0   6.0  -12.6  -6.6   2.2     --->      0.0   6.0  -12.6  -6.6   2.2\n",
-      "  2.0  -8.0    2.0   0.0  -1.0               0.0  -6.0    4.4   2.4  -1.8\n",
-      "  2.0   9.0   -6.0   3.0  -9.0               2.0   9.0   -6.0   3.0  -9.0\n",
-      "Gaussian elimination for colum 1 with povot -5.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      "  0.0   6.0  -12.6  -6.6   2.2     --->      0.0   6.0  -12.6  -6.6   2.2\n",
-      "  0.0  -6.0    4.4   2.4  -1.8               0.0  -6.0    4.4   2.4  -1.8\n",
-      "  2.0   9.0   -6.0   3.0  -9.0               0.0  11.0   -3.6   5.4  -9.8\n",
-      "Gaussian elimination for colum 2 with povot -4.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      "  0.0   6.0  -12.6  -6.6   2.2     --->      0.0   0.0  -29.1  -5.1   6.7\n",
-      "  0.0  -6.0    4.4   2.4  -1.8               0.0  -6.0    4.4   2.4  -1.8\n",
-      "  0.0  11.0   -3.6   5.4  -9.8               0.0  11.0   -3.6   5.4  -9.8\n",
-      "Gaussian elimination for colum 2 with povot -4.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0   6.0  -2.0\n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0   1.0   3.0\n",
-      "  0.0   0.0  -29.1  -5.1   6.7     --->      0.0   0.0  -29.1  -5.1   6.7\n",
-      "  0.0  -6.0    4.4   2.4  -1.8               0.0   0.0   20.9   0.9  -6.3\n",
-      "  0.0  11.0   -3.6   5.4  -9.8               0.0  11.0   -3.6   5.4  -9.8\n",
-      "Gaussian elimination for colum 2 with povot -4.0\n",
-      " -5.0   5.0    6.0   6.0  -2.0              -5.0   5.0    6.0    6.0   -2.0 \n",
-      "  0.0  -4.0  -11.0   1.0   3.0               0.0  -4.0  -11.0    1.0    3.0 \n",
-      "  0.0   0.0  -29.1  -5.1   6.7     --->      0.0   0.0  -29.1   -5.1    6.7 \n",
-      "  0.0   0.0   20.9   0.9  -6.3               0.0   0.0   20.9    0.9   -6.3 \n",
-      "  0.0  11.0   -3.6   5.4  -9.8               0.0   0.0  -33.85   8.15  -1.55\n",
-      "Gaussian elimination for colum 3 with povot -29.1\n",
-      " -5.0   5.0    6.0    6.0   -2.0               -5.0   5.0    6.0    6.0    -2.0  \n",
-      "  0.0  -4.0  -11.0    1.0    3.0                0.0  -4.0  -11.0    1.0     3.0  \n",
-      "  0.0   0.0  -29.1   -5.1    6.7      --->      0.0   0.0  -29.1   -5.1     6.7  \n",
-      "  0.0   0.0   20.9    0.9   -6.3                0.0   0.0    0.0   -2.763  -1.488\n",
-      "  0.0   0.0  -33.85   8.15  -1.55               0.0   0.0  -33.85   8.15   -1.55 \n",
-      "Gaussian elimination for colum 3 with povot -29.1\n",
-      " -5.0   5.0    6.0    6.0    -2.0                -5.0   5.0    6.0   6.0    -2.0  \n",
-      "  0.0  -4.0  -11.0    1.0     3.0                 0.0  -4.0  -11.0   1.0     3.0  \n",
-      "  0.0   0.0  -29.1   -5.1     6.7       --->      0.0   0.0  -29.1  -5.1     6.7  \n",
-      "  0.0   0.0    0.0   -2.763  -1.488               0.0   0.0    0.0  -2.763  -1.488\n",
-      "  0.0   0.0  -33.85   8.15   -1.55                0.0   0.0    0.0  14.082  -9.344\n",
-      "Gaussian elimination for colum 4 with povot -2.762886597938143\n",
-      " -5.0   5.0    6.0   6.0    -2.0                -5.0   5.0    6.0   6.0     -2.0  \n",
-      "  0.0  -4.0  -11.0   1.0     3.0                 0.0  -4.0  -11.0   1.0      3.0  \n",
-      "  0.0   0.0  -29.1  -5.1     6.7       --->      0.0   0.0  -29.1  -5.1      6.7  \n",
-      "  0.0   0.0    0.0  -2.763  -1.488               0.0   0.0    0.0  -2.763   -1.488\n",
-      "  0.0   0.0    0.0  14.082  -9.344               0.0   0.0    0.0   0.0    -16.928\n"
+      "Gaussian elimination for colum 1 with pivot 5.0\n",
+      "  5.0  -8.0   9.0  -2.0   7.0               5.0  -8.0   9.0  -2.0   7.0\n",
+      " -5.0   0.0  -8.0   1.0  -1.0               0.0  -8.0   1.0  -1.0   6.0\n",
+      "  5.0   8.0   2.0   7.0  -8.0     --->      5.0   8.0   2.0   7.0  -8.0\n",
+      "  8.0   0.0   2.0  -2.0   7.0               8.0   0.0   2.0  -2.0   7.0\n",
+      " -9.0  -2.0  -5.0   9.0   0.0              -9.0  -2.0  -5.0   9.0   0.0\n",
+      "Gaussian elimination for colum 1 with pivot 5.0\n",
+      "  5.0  -8.0   9.0  -2.0   7.0               5.0  -8.0   9.0  -2.0    7.0\n",
+      "  0.0  -8.0   1.0  -1.0   6.0               0.0  -8.0   1.0  -1.0    6.0\n",
+      "  5.0   8.0   2.0   7.0  -8.0     --->      0.0  16.0  -7.0   9.0  -15.0\n",
+      "  8.0   0.0   2.0  -2.0   7.0               8.0   0.0   2.0  -2.0    7.0\n",
+      " -9.0  -2.0  -5.0   9.0   0.0              -9.0  -2.0  -5.0   9.0    0.0\n",
+      "Gaussian elimination for colum 1 with pivot 5.0\n",
+      "  5.0  -8.0   9.0  -2.0    7.0               5.0  -8.0    9.0  -2.0    7.0\n",
+      "  0.0  -8.0   1.0  -1.0    6.0               0.0  -8.0    1.0  -1.0    6.0\n",
+      "  0.0  16.0  -7.0   9.0  -15.0     --->      0.0  16.0   -7.0   9.0  -15.0\n",
+      "  8.0   0.0   2.0  -2.0    7.0               0.0  12.8  -12.4   1.2   -4.2\n",
+      " -9.0  -2.0  -5.0   9.0    0.0              -9.0  -2.0   -5.0   9.0    0.0\n",
+      "Gaussian elimination for colum 1 with pivot 5.0\n",
+      "  5.0  -8.0    9.0  -2.0    7.0              5.0   -8.0    9.0  -2.0    7.0\n",
+      "  0.0  -8.0    1.0  -1.0    6.0              0.0   -8.0    1.0  -1.0    6.0\n",
+      "  0.0  16.0   -7.0   9.0  -15.0     --->     0.0   16.0   -7.0   9.0  -15.0\n",
+      "  0.0  12.8  -12.4   1.2   -4.2              0.0   12.8  -12.4   1.2   -4.2\n",
+      " -9.0  -2.0   -5.0   9.0    0.0              0.0  -16.4   11.2   5.4   12.6\n",
+      "Gaussian elimination for colum 2 with pivot -8.0\n",
+      " 5.0   -8.0    9.0  -2.0    7.0              5.0   -8.0    9.0  -2.0   7.0\n",
+      " 0.0   -8.0    1.0  -1.0    6.0              0.0   -8.0    1.0  -1.0   6.0\n",
+      " 0.0   16.0   -7.0   9.0  -15.0     --->     0.0    0.0   -5.0   7.0  -3.0\n",
+      " 0.0   12.8  -12.4   1.2   -4.2              0.0   12.8  -12.4   1.2  -4.2\n",
+      " 0.0  -16.4   11.2   5.4   12.6              0.0  -16.4   11.2   5.4  12.6\n",
+      "Gaussian elimination for colum 2 with pivot -8.0\n",
+      " 5.0   -8.0    9.0  -2.0   7.0              5.0   -8.0    9.0  -2.0   7.0\n",
+      " 0.0   -8.0    1.0  -1.0   6.0              0.0   -8.0    1.0  -1.0   6.0\n",
+      " 0.0    0.0   -5.0   7.0  -3.0     --->     0.0    0.0   -5.0   7.0  -3.0\n",
+      " 0.0   12.8  -12.4   1.2  -4.2              0.0    0.0  -10.8  -0.4   5.4\n",
+      " 0.0  -16.4   11.2   5.4  12.6              0.0  -16.4   11.2   5.4  12.6\n",
+      "Gaussian elimination for colum 2 with pivot -8.0\n",
+      " 5.0   -8.0    9.0  -2.0   7.0              5.0  -8.0    9.0   -2.0    7.0\n",
+      " 0.0   -8.0    1.0  -1.0   6.0              0.0  -8.0    1.0   -1.0    6.0\n",
+      " 0.0    0.0   -5.0   7.0  -3.0     --->     0.0   0.0   -5.0    7.0   -3.0\n",
+      " 0.0    0.0  -10.8  -0.4   5.4              0.0   0.0  -10.8   -0.4    5.4\n",
+      " 0.0  -16.4   11.2   5.4  12.6              0.0   0.0    9.15   7.45   0.3\n",
+      "Gaussian elimination for colum 3 with pivot -5.0\n",
+      " 5.0  -8.0    9.0   -2.0    7.0              5.0  -8.0   9.0    -2.0    7.0 \n",
+      " 0.0  -8.0    1.0   -1.0    6.0              0.0  -8.0   1.0    -1.0    6.0 \n",
+      " 0.0   0.0   -5.0    7.0   -3.0     --->     0.0   0.0  -5.0     7.0   -3.0 \n",
+      " 0.0   0.0  -10.8   -0.4    5.4              0.0   0.0   0.0   -15.52  11.88\n",
+      " 0.0   0.0    9.15   7.45   0.3              0.0   0.0   9.15    7.45   0.3 \n",
+      "Gaussian elimination for colum 3 with pivot -5.0\n",
+      " 5.0  -8.0   9.0    -2.0    7.0               5.0  -8.0   9.0   -2.0    7.0 \n",
+      " 0.0  -8.0   1.0    -1.0    6.0               0.0  -8.0   1.0   -1.0    6.0 \n",
+      " 0.0   0.0  -5.0     7.0   -3.0      --->     0.0   0.0  -5.0    7.0   -3.0 \n",
+      " 0.0   0.0   0.0   -15.52  11.88              0.0   0.0   0.0  -15.52  11.88\n",
+      " 0.0   0.0   9.15    7.45   0.3               0.0   0.0   0.0   20.26  -5.19\n",
+      "Gaussian elimination for colum 4 with pivot -15.520000000000001\n",
+      " 5.0  -8.0   9.0   -2.0    7.0               5.0  -8.0   9.0   -2.0    7.0  \n",
+      " 0.0  -8.0   1.0   -1.0    6.0               0.0  -8.0   1.0   -1.0    6.0  \n",
+      " 0.0   0.0  -5.0    7.0   -3.0      --->     0.0   0.0  -5.0    7.0   -3.0  \n",
+      " 0.0   0.0   0.0  -15.52  11.88              0.0   0.0   0.0  -15.52  11.88 \n",
+      " 0.0   0.0   0.0   20.26  -5.19              0.0   0.0   0.0    0.0   10.318\n"
      ]
     }
    ],
@@ -420,6 +420,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Julia 1.3.1",
    "language": "julia",
